src/golden/cards/templates/nested/typeerrors/test.golden/definedBeforeReferenced.fl
	card DefinedBeforeReferenced
		state 
			MyX x
			MyX y
		
		template top
			field1 <- x => referer
		
		template inner
		
		template referer
			other <- y => inner
